# mini-agent

./: .env  .gitignore  README.md  config.py  database.py  main.py  mcp_config.json  pyproject.toml  workflow.md
auth/: dependencies.py  models.py  router.py  service.py
chat/: models.py  router.py  service.py
chat/auth/: models.py  router.py  service.py
demo/llm/: chat.py
demo/mcp/: mcp_client.py  mcp_server.py  test.py
demo/rag/: chat.py  embed.py  input.txt  main.py  text_chunker.py
demo/tools/: funtion_call.py
mn_agent/: test.py
mn_agent/agent/: agent.py
mn_agent/config/: agent_config.py
mn_agent/llm/: llm.py  utils.py
mn_agent/rag/: embed.py  rag_engine.py
mn_agent/tools/: base.py  filesystem_tool.py  mcp_client.py  tool_manager.py
mn_agent/workflow/: article_summary_workflow.json  engine.py  main.py  nodes.py  parser.py  test_article_summary.py  visualizer.py
src/mini_agent/agent/: agent.py
src/mini_agent/llm/: llm.py
src/mini_agent/rag/: rag_engine.py  text_chunker.py
src/mini_agent/tools/: base.py  filesystem_tool.py  mcp_client.py  tool_manager.py
src/mini_agent/workflow/: engine.py  nodes.py
static/js/: chat.js
templates/: index.html
tests/: just_test.py  test_agent.py  test_openai.py  test_rag.py  test_service.py  test_tools.py  test_workflow.py
